@@ -1,5 +1,11 @@
 [b]Version 0.6.2[/b]:
 
+(2008-08-09)
+ * As it seems many people don't understand (and even send bug reports) the 
+   new meaning of the font scale options in Preferences->Subtitles, those two
+   options have been hidden. (They can be made visible again changing the 
+   value of the new config option show_font_scale_options_in_preferences).
+
 (2008-08-07)
  * Added a time display to the floating control in the minigui.
  * The playlist and the volume slider don't send mouse events to their
